--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -25,9 +25,9 @@
     <string name="about_text">Çeşitli biçimlerde sayısal çizgi roman görüntüleyici uygulama. Sezgisel kullanım, akıcı geçişler, hızlı yüklemeler sunar ve kaynak kodu özgürdür.</string>
     <string name="about_unrar_version">UnRAR sürümü: %s</string>
     <string name="about_version">Sürüm: %s</string>
-    <string name="about_revision">Revision: %s</string>
-    <string name="about_build_date">Build date: %s</string>
-    <string name="licenses_waiting">Please wait while updating licenses…</string>
+    <string name="about_revision">Revizyon: %s</string>
+    <string name="about_build_date">Derleme tarihi: %s</string>
+    <string name="licenses_waiting">Lisanslar güncelleniyor, bekleyiniz…</string>
     <string name="album_downloading">\"%s\" dosyası indiriliyor…</string>
     <string name="app_name">Çizgi roman görüntüleyici</string>
     <string name="bookmark_help">Bir / ile başlayan mutlak yol (/İndirmeler veya /Resimler gibi) ya da domain.com/comics/index.xml gibi bir URL girebilirsiniz. http:// ön ekini belirtmezseniz, / karakteriyle başlamıyorsa otomatik olarak eklenir. \"Uzaktaki albümler\" hakkında detaylar için \"Yardıma\" bakınız.</string>
@@ -75,7 +75,7 @@
     <string name="preference_category_view">Görünüm</string>
     <string name="preference_clear_cache_albums">Albümleri sil</string>
     <string name="preference_clear_cache_albums_toast">İndirilen tüm albümler silindi</string>
-    <string name="preference_clear_cache_albums_summary">İndirilip arabelleğe alınan tüm albümleri sil</string>
+    <string name="preference_clear_cache_albums_summary">İndirilip ara belleğe alınan tüm albümleri sil</string>
     <string name="preference_clear_cache_thumbnails">Minyatürleri sil</string>
     <string name="preference_clear_cache_thumbnails_summary">İndirilen ya da oluşturulan tüm minyatürleri sil</string>
     <string name="preference_clear_cache_thumbnails_toast">Tüm minyatürler silindi</string>
@@ -88,22 +88,22 @@
     <string name="preference_full_screen_label">Tam ekran</string>
     <string name="preference_full_screen_summary">Mümkünse durum çubuğunu saklar</string>
     <string name="preference_high_quality_label">32 bit renk</string>
-    <string name="preference_high_quality_summary">Uyarı: bu akıcılığı azaltabilir ve daha fazla bellek kullanabilir de mémoire</string>
+    <string name="preference_high_quality_summary">Uyarı: bu akıcılığı azaltabilir ve daha fazla bellek kullanabilir</string>
     <string name="preference_overlay_duration_label">Sayfa sayısı</string>
     <string name="preference_overlay_duration_summary">Sayfa sayısının gösterilme süresi</string>
     <string name="preference_sample_label">Zorlanan boyutlandırma ölçeği</string>
     <string name="preference_sample_summary">Bellek tasarruf etmek için yüklendiğinde bir resme uygulanacak yeniden boyutlandırma ölçeği</string>
     <string name="preference_zoom_label">Yeniden boyutlandırma</string>
     <string name="preference_zoom_summary">Sayfaların yeniden boyutlandırma kipi</string>
-    <string name="preference_category_misc">Misc</string>
-    <string name="preference_about">About ComicsReader</string>
-    <string name="preference_about_summary">Version and 3rd party licenses</string>
+    <string name="preference_category_misc">Diğer</string>
+    <string name="preference_about">ComicsReader Hakkında</string>
+    <string name="preference_about_summary">Sürüm ve 3. taraf lisansları</string>
     <string name="previous_page">Evvelki sayfa</string>
     <string name="settings">Tercihler</string>
     <string name="yes">Evet</string>
     <string name="username">Kullanıcı</string>
     <string name="password">Parola</string>
     <string name="remember_password">Parolayı hatırla</string>
-    <string name="contributors_label">Contributors:</string>
-    <string name="contributors">- ultrapeer (Turkish translation and French typos)</string>
+    <string name="contributors_label">İştirak edenler:</string>
+    <string name="contributors">- ultrapeer (Türkçe tercüme ve Fransızca imlâ düzeltmeleri)</string>
 </resources>
