Fixed: Small typo in spanish

--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -97,7 +97,7 @@
     <string name="preference_zoom_summary">Modo de escalar páginas</string>
     <string name="preference_category_misc">Varios</string>
     <string name="preference_about">Sobre ComicsReader</string>
-    <string name="preference_about_summary">Versión and licencias de terceros</string>
+    <string name="preference_about_summary">Versión y licencias de terceros</string>
     <string name="previous_page">Página anterior</string>
     <string name="settings">Ajustes</string>
     <string name="yes">Sí</string>
