--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,7 +19,7 @@
 -->
 <resources>
     <string name="icon">Icon</string>
-    <string name="version">1.0</string>
+    <string name="version">1.1</string>
     <string name="revision"></string>
     <string name="build_date"></string>
     <string name="about">About</string>
@@ -110,4 +110,11 @@
     <string name="remember_password">Remember password</string>
     <string name="contributors_label">Contributors:</string>
     <string name="contributors">- ultrapeer (Turkish translation and French typos)\n- Zufre (Spanish translation)</string>
+    <string name="browser_album_title">No title</string>
+    <string name="preference_edges_resistance_label">Edges resistance</string>
+    <string name="preference_edges_resistance_summary">Resistance before switching page</string>
+    <string name="preference_page_transition_speed_label">Page transition speed</string>
+    <string name="preference_page_transition_speed_summary">Speed used for next/previous page transition animation</string>
+    <string name="preference_reading_direction_label">Right to left pages transition</string>
+    <string name="preference_reading_direction_summary">Swipe to the left to switch to next page</string>
 </resources>
