Changed: Copied english to spanish and turkish files

--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -106,4 +106,11 @@
     <string name="remember_password">Parolayı hatırla</string>
     <string name="contributors_label">İştirak edenler:</string>
     <string name="contributors">- ultrapeer (Türkçe tercüme ve Fransızca imlâ düzeltmeleri)\n- Zufre (İspanyolca tercüme)</string>
+    <string name="browser_album_title">No title</string>
+    <string name="preference_edges_resistance_label">Edges resistance</string>
+    <string name="preference_edges_resistance_summary">Resistance before switching page</string>
+    <string name="preference_page_transition_speed_label">Page transition speed</string>
+    <string name="preference_page_transition_speed_summary">Speed used for next/previous page transition animation</string>
+    <string name="preference_reading_direction_label">Right to left reading direction</string>
+    <string name="preference_reading_direction_summary">Swipe to the left to switch to next page</string>
 </resources>
