--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -106,4 +106,11 @@
     <string name="remember_password">Se souvenir du mot de passe</string>
     <string name="contributors_label">Contributeurs :</string>
     <string name="contributors">- ultrapeer (traduction en turc et fautes de français)\n- Zufre (traduction en espagnol)</string>
+    <string name="browser_album_title">Aucun titre</string>
+    <string name="preference_edges_resistance_label">Résistance aux bords</string>
+    <string name="preference_edges_resistance_summary">Résistance avant de changer de page</string>
+    <string name="preference_page_transition_speed_label">Vitesse de transition de page</string>
+    <string name="preference_page_transition_speed_summary">Vitesse de l'animation de transition pour la page suivante/précédente</string>
+    <string name="preference_reading_direction_label">Sens de lecture de droite à gauche</string>
+    <string name="preference_reading_direction_summary">Déplacer vers la gauche pour afficher la page suivante</string>
 </resources>
