--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!--
  * ComicsReader is an Android application to read comics
- * Copyright (C) 2011-2012 Cedric OCHS
+ * Copyright (C) 2011-2013 Cedric OCHS
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -19,7 +19,7 @@
 -->
 <resources>
     <string name="about">Hakkında</string>
-    <string name="about_author">© 2011–2012 Kervala</string>
+    <string name="about_author">© 2011–2013 Kervala</string>
     <string name="about_license">Bu uygulama GPLv3 lisansı kapsamında yayınlanmıştır:</string>
     <string name="about_support">http://code.google.com/p/android-comicsreader/</string>
     <string name="about_text">Çeşitli biçimlerde sayısal çizgi roman görüntüleyici uygulama. Sezgisel kullanım, akıcı geçişler, hızlı yüklemeler sunar ve kaynak kodu özgürdür.</string>
@@ -106,11 +106,11 @@
     <string name="remember_password">Parolayı hatırla</string>
     <string name="contributors_label">İştirak edenler:</string>
     <string name="contributors">- ultrapeer (Türkçe tercüme ve Fransızca imlâ düzeltmeleri)\n- Zufre (İspanyolca tercüme)</string>
-    <string name="browser_album_title">No title</string>
-    <string name="preference_edges_resistance_label">Edges resistance</string>
-    <string name="preference_edges_resistance_summary">Resistance before switching page</string>
-    <string name="preference_page_transition_speed_label">Page transition speed</string>
-    <string name="preference_page_transition_speed_summary">Speed used for next/previous page transition animation</string>
-    <string name="preference_reading_direction_label">Right to left reading direction</string>
-    <string name="preference_reading_direction_summary">Swipe to the left to switch to next page</string>
+    <string name="browser_album_title">Başlıksız</string>
+    <string name="preference_edges_resistance_label">Kenarların direnci</string>
+    <string name="preference_edges_resistance_summary">Sayfa çevrimi öncesi direnç</string>
+    <string name="preference_page_transition_speed_label">Sayfa çevirme hızı</string>
+    <string name="preference_page_transition_speed_summary">Sonraki/önceki sayfaya geçiş animasyonu hızı</string>
+    <string name="preference_reading_direction_label">Sağdan sola okuma yönü</string>
+    <string name="preference_reading_direction_summary">Sonraki sayfaya geçmek için sağdan sola kaydırın</string>
 </resources>
